--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -32,7 +32,7 @@
                     <i class="fas fa-comments text-blue-600 text-xl"></i>
                 </div>
                 <h3 class="text-xl font-semibold mb-2">커뮤니티</h3>
-                <p class="text-gray-600 mb-4">학교 소식을 공유하세요.</p>
+                <p class="text-gray-600 mb-4">학교 소식을 공유하고 소통하세요.</p>
                 <a href="{{ url_for('community') }}" class="text-blue-600 hover:text-blue-800 font-medium inline-flex items-center">
                     자세히 보기 <i class="fas fa-arrow-right ml-1"></i>
                 </a>
